[package]
name = "nameof"
version = "1.0.0"
license = "MIT"
description = "Provides a Rust macro to determine the string name of a binding, type, or function."
authors = ["Rico A. Beti <rico.beti@silentbyte.com>"]
repository = "https://github.com/SilentByte/nameof.git"
homepage = "https://github.com/SilentByte/nameof"
readme = "README.md"

[badges]
travis-ci = { repository = "SilentByte/nameof", branch = "master" }
