[package]
name = "nameof"
version = "1.3.0"
license = "MIT"
description = "Provides a Rust macro to determine the string name of a binding, type, const, or function."
authors = ["Rico A. Beti <rico.beti@silentbyte.com>"]
repository = "https://github.com/SilentByte/nameof.git"
homepage = "https://github.com/SilentByte/nameof"
readme = "README.md"
keywords = ["macro", "nameof", "no_std"]

[[test]]
name = "nameof_type_2015_edition"
path = "tests/nameof_type_2015_edition.rs"
edition = "2015"

[[test]]
name = "nameof_type_2018_edition"
path = "tests/nameof_type_2018_edition.rs"
edition = "2018"
